--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://young-springs-95441.herokuapp.com/",
+  "proxy": "https://young-springs-95441.herokuapp.com",
   "eslintConfig": {
     "extends": [
       "react-app"
